--- a/.github/workflows/jupyter-rust-publish.yml
+++ b/.github/workflows/jupyter-rust-publish.yml
@@ -7,10 +7,10 @@ name: jupyter-rust-publish
 
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows: [rust-stable-ubuntu-publish]
-    types:
-      - completed
+  # workflow_run:
+    # workflows: [rust-stable-ubuntu-publish]
+    # types:
+    #  - completed
   # schedule:
     # - cron: '0 8 * * 0'
   # push:
