--- a/.github/workflows/jupyter-rust-nightly-publish.yml
+++ b/.github/workflows/jupyter-rust-nightly-publish.yml
@@ -7,7 +7,7 @@ name: jupyter-rust-nightly-publish
 
 on:
   schedule:
-     - cron: '0 18 * * *'
+     - cron: '0 18 10 * *'
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: docker.io
