--- a/.github/workflows/jupyter-rust-nightly-publish.yml
+++ b/.github/workflows/jupyter-rust-nightly-publish.yml
@@ -8,7 +8,7 @@ name: jupyter-rust-nightly-publish
 on:
   workflow_dispatch:
   schedule:
-     - cron: '0 18 10 * *'
+     - cron: '0 18 * * *'
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: docker.io
